--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/yardboy2401/techyNotes-MERN-wymore#readme",
   "dependencies": {
-    "express": "^4.18.1"
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "date-fns": "^2.29.2",
+    "express": "^4.18.1",
+    "uuid": "^8.3.2"
   }
 }
